--- a/TestApplication/app/build.gradle
+++ b/TestApplication/app/build.gradle
@@ -27,3 +27,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
+
+android {
+    useLibrary 'org.apache.http.legacy'
+}
